--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
             </section>
             <!--Links-->
             <section>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
-                <a target="_bLank" href="#"></a><br>
+                <a target="_bLank" href="https://baay22.github.io/Peters-8/">https://baay22.github.io/Peters-8/</a><br>
+                <a target="_bLank" href="https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/PETERS/Peters-8/index.html">https://baaykherkroldanseo.s3.us-east-005.backblazeb2.com/PETERS/Peters-8/index.html</a><br>
+                <a target="_bLank" href="https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/PETERS/Peters-8/index.html">https://kradscloudstack.s3.ap-northeast-1.amazonaws.com/PETERS/Peters-8/index.html</a><br>
+                <a target="_bLank" href="https://fluffy-clafoutis-b1d215.netlify.app">https://fluffy-clafoutis-b1d215.netlify.app</a><br>
             </section>
         <!---Sidebar-->
         <div class="side-bar">
